--- a/a3275a07042046bc80afa9054cbf0704.md
+++ b/a3275a07042046bc80afa9054cbf0704.md
@@ -74,9 +74,8 @@ Get all the components ready.
 **Step 3: Soldering Battery Holder.**
 
 ![](vertopal_a3275a07042046bc80afa9054cbf0704/media/image17.png) 
-height="0.375in"}
 
-> **Soldering battery holder** to the **PCB PCB**.
+> **Soldering battery holder** to the **PCB**.
 >
 > **Note: Take care** of **polarities polarities**.
 
@@ -161,6 +160,5 @@ comment section below.**
 
 ![](vertopal_a3275a07042046bc80afa9054cbf0704/media/image33.png) 
  
-
 
 ![](vertopal_a3275a07042046bc80afa9054cbf0704/media/image34.png) 
